Fix contact title styling to be more aligned across media queries

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -351,6 +351,10 @@ button {
 /* narrow width */
 @media screen and (min-width: 420px) and (max-width: 570px) {
   .contact {
+    .title {
+      margin-top: 30px;
+    }
+
     .social-media-icon {
       height: 100px;
       width: 100px;
